old-archive/pos/1-create-ns-pos.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pos
---
#default deny network policy
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
  # name: default-deny
  # namespace: pos
# spec:
  # podSelector: {}
