old-archive/pos/5-create-statefulset-pos-service-router.yaml
apiVersion: v1
kind: Service
metadata:
  name: mq
  namespace: pos
  labels:
    app: mq
spec:
  ports:
  - port: 49500
    name: tcp
  clusterIP: None
  selector:
    app: pos-service-router
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: pos-service-router
  name: pos-service-router
  namespace: pos
spec:
  podManagementPolicy: Parallel
  serviceName: mq
  replicas: 4
  selector:
    matchLabels:
      app: pos-service-router
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pos-service-router
    spec:
      containers:
      - image: drydock.medimpact.com/pos-mark-test:2
        command: ["/opt/pos/bin/service_router","-c","/opt/pos/etc/service_router.cfg"]
        workingDir: /opt/pos/bin
        imagePullPolicy: IfNotPresent
        name: pos-service-router
        ports:
        - containerPort: 49500
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          tcpSocket:
            port: 49501
          initialDelaySeconds: 5
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "200m"
            memory: "50Mi"
          requests:
            cpu: "50m"
            memory: "50Mi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/pos/etc
          name: config
        # - mountPath: /app/secret
          # name: creds
        # - mountPath: /app/ssl/
          # name: tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 7261
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: pos-all-configs
        name: config
---
apiVersion: v1
kind: Service
metadata:
  name: pos-service-router
  namespace: pos
spec:
  type: ClusterIP
  ports:
  - name: pos-service-router
    port: 49500
    protocol: TCP
    targetPort: 49500
  - name: pos-service-router-monitor
    port: 49501
    protocol: TCP
    targetPort: 49501
  selector:
    app: pos-service-router
