old-archive/pos/7-create-deploy-pos-drugpricer-soap.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: pos-drugpricer-soap
  name: pos-drugpricer-soap
  namespace: pos
spec:
  replicas: 6
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pos-drugpricer-soap
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pos-drugpricer-soap
    spec:
      containers:
      - image: drydock.medimpact.com/pos-mark-test:2
        command: ["/opt/pos/infrastructure/node/bin/node","/opt/pos/bin/soap_adapter.js","-c","/opt/pos/etc/drug_pricer_soap.cfg"]
        workingDir: /opt/pos/bin
        imagePullPolicy: IfNotPresent
        name: pos-drugpricer-soap
        ports:
        - containerPort: 49202
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /drug_price_interactive/DrugPrice-v1_0
            port: 49202
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "200m"
            memory: "50Mi"
          requests:
            cpu: "50m"
            memory: "50Mi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/pos/etc
          name: config
        # - mountPath: /app/secret
          # name: creds
        # - mountPath: /app/ssl/
          # name: tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 7261
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: pos-all-configs
        name: config
      # - secret:
          # defaultMode: 420
          # secretName: nimsoft-creds
          # items:
          # - key: creds.yaml
            # path: creds.yaml
        # name: creds
      # - secret:
          # defaultMode: 420
          # secretname: pos-drugpricer-soap.medimpact.com.tls
        # name: tls
---
apiVersion: v1
kind: Service
metadata:
  name: pos-drugpricer-soap
  namespace: pos
spec:
  type: ClusterIP
  ports:
  - name: pos-drugpricer-soap
    port: 49202
    protocol: TCP
    targetPort: 49202
  selector:
    app: pos-drugpricer-soap
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pos-drugpricer-soap.tcp49202
  namespace: pos
spec:
  podSelector:
    matchLabels:
      app: pos-drugpricer-soap
  ingress:
  - ports:
    - protocol: TCP
      port: 49202
